<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FriendsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextFindFriends"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:background="@drawable/custom_input"
            android:padding="10dp"
            android:hint="@string/find_friends"
            android:inputType="textPersonName"
            android:textSize="15sp"
           />

        <Button
            android:id="@+id/button_friends_addFriend"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/editTextFindFriends"
            android:layout_marginStart="10dp"
            android:textSize="10sp"
            android:text="@string/Add" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_friends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/divider_friends"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="30dp"
            android:padding="0dp" />

        <View
            android:id="@+id/divider_friends"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignTop="@+id/editTextFindFriends"
            android:layout_marginVertical="130dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/divider_friends"
            android:layout_marginVertical="10dp"
            android:textColor="#CD780A"
            android:text="@string/friends_count" />
    </RelativeLayout>
</FrameLayout>